# otus_7

./: CMakeLists.txt  Doxyfile  README.md  console_view.cpp  console_view.h  controller.cpp  controller.h  interface.h  main.cpp  model.cpp  model.h  state.cpp  state.h  test_version_g.cpp
.github/workflows/: release.yml
